// Copyright 2018 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pkg.apis.bundle.v1alpha1;

option go_package = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/apis/bundle/v1alpha1";

import "google/protobuf/struct.proto";
import "pkg/apis/bundle/v1alpha1/bundle_common.proto";
import "pkg/apis/bundle/v1alpha1/patch.proto";

// Kubernetes objects grouped into cluster components and versioned together.
// These could be applications or they could be some sort of supporting
// object collection.
message ClusterComponent {
  // Name of this component. Each component in a bundle must have a unique
  // name. For an example you might have a 'kube-apiserver' component or
  // perhaps even a 'kubernetes' component, depending on the granulatarity of
  // the Bundle components.
  string name = 1;

  // Version-string for this component.
  string version = 2;

  // Structured Kubenetes objects that run as part of this app, whether on the
  // master, on the nodes, or in some other fashion. There is no ordering
  // guarantee for when these objects are deployed (they can be deployed in any
  // order to the cluster).
  repeated ClusterObject cluster_objects = 3;
}

// A Kubernetes object of unspecified type.
message ClusterObject {
  // The name of this cluster object. This must be unique within the Cluster
  // Component.
  string name = 1;

  // A Kubernetes object that's untyped but which has YAML-structure. These have
  // historically been called 'YAMLs' or 'Manifests'. You might expect
  // Kubernetes objects like pods, deployments, or daemonsets to live here.
  oneof kube_data {
    // The Kubernetes object specified as an inline. All Kubernetes objects
    // must be YAML/JSON compatible.
    google.protobuf.Struct inlined = 2;

    // An external Kubernetes file, specified on a local or remote file system.
    // The file must be specified as either YAML or JSON.
    File file = 3;
  }

  // Patches this cluster object, which allow specialization/customization
  // of the cluster via strategic merge patch.
  oneof patch_data {
    // Inlined patches
    PatchCollection patch_collection = 4;

    // Externally referenced patches that has the format of an
    // PatchCollection. The file must be be either YAML or JSON.
    File patch_file = 5;
  }
}
